--- a/.github/workflows/fetch_tmdb_data.yml
+++ b/.github/workflows/fetch_tmdb_data.yml
@@ -1,11 +1,5 @@
 name: Fetch TMDB data
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
